cmake_minimum_required(VERSION 3.20)
project(3rd_party_examples)

add_subdirectory(asio)
add_subdirectory(asio_and_flatbuffers)
add_subdirectory(asio_and_openssl)
add_subdirectory(box2d)
add_subdirectory(cxxopts)
add_subdirectory(enet)
add_subdirectory(EnTT)
add_subdirectory(flatbuffers)
add_subdirectory(glm)
add_subdirectory(GTest)
add_subdirectory(imgui)
add_subdirectory(implot)
add_subdirectory(magic_enum)
add_subdirectory(miniaudio)
add_subdirectory(nlohmann_json)
add_subdirectory(OpenAL)
add_subdirectory(SDL3)
add_subdirectory(SDL3_image)
add_subdirectory(spdlog)
add_subdirectory(Tracy)